# my_upper_computer

./: .gitignore  ARCHITECTURE.md  BUILD.md  CMakeLists.txt  IMGUI_VS_QT.md  PACKAGE_GUIDE.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  QUICKSTART_PACKAGE.md  README.md  README_IMGUI.md  UI_UPGRADE_REPORT.md  VSCODE_SETUP.md  build.bat  build.sh  build_imgui.bat  build_simple.bat  package.bat
SerialDebugger_Release/: README.txt  imgui.ini  使用说明.txt  性能优化说明.txt  更新说明.txt  测试脚本_FireWater.py  版本信息.txt
imgui_ui/: COMPLETION_SUMMARY.md  DataConverter.cpp  DataConverter.h  README_IMGUI.md  SerialPort_Win.cpp  SerialPort_Win.h  main_imgui.cpp
imgui_ui/core/: AppState.h  CircularBuffer.h  ConfigManager.cpp  ConfigManager.h  DataChannelManager.h  DataTypes.h  ThreadPool.h
imgui_ui/protocols/: CsvParser.h  CustomParser.h  FireWaterParser.h  JustFloatParser.h  ProtocolParser.h  RawDataParser.h
imgui_ui/ui/: ComponentLibrary.h  VisualizationUI.h  VisualizationUI.h.backup  WorkspaceManager.h
imgui_ui/visualization/: BarChartWidget.h  DataTableWidget.h  DigitalDisplayWidget.h  GaugeWidget.h  WaveformWidget.h  Widget.h
resources/: resources.qrc
resources/configs/: default_config.json  protocol_templates.json
resources/styles/: dark_theme.qss
resources/themes/: professional_dark.qss
src/: main.cpp
src/core/: DataLogger.cpp  DataLogger.h  SerialManager.cpp  SerialManager.h
src/ui/: MainWindow.cpp  MainWindow.h
src/ui/widgets/: ChartWidget.cpp  ChartWidget.h  DataDisplayWidget.cpp  DataDisplayWidget.h  SendWidget.cpp  SendWidget.h  SerialConfigWidget.cpp  SerialConfigWidget.h
